syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package resource_api_grpc_pb;


service ResourceApi {
  rpc Status(StatusRequest) returns (StatusReply) {}

  rpc Action(ActionRequest) returns (ActionReply) {}

  rpc UpdateNode(UpdateNodeRequest) returns (UpdateNodeReply) {}

  // rpc GetNetworkV4(GetNetworkV4Request) returns (GetNetworkV4Reply) {}
  // rpc CreateNetworkV4(CreateNetworkV4Request) returns (CreateNetworkV4Reply) {}
  // rpc UpdateNetworkV4(UpdateNetworkV4Request) returns (UpdateNetworkV4Reply) {}
  // rpc DeleteNetworkV4(DeleteNetworkV4Request) returns (DeleteNetworkV4Reply) {}

  // rpc GetCompute(GetComputeRequest) returns (GetComputeReply) {}
  // rpc CreateCompute(CreateComputeRequest) returns (CreateComputeReply) {}
  // rpc UpdateCompute(UpdateComputeRequest) returns (UpdateComputeReply) {}
  // rpc DeleteCompute(DeleteComputeRequest) returns (DeleteComputeReply) {}

  // rpc GetImage(GetImageRequest) returns (GetImageReply) {}
  // rpc CreateImage(CreateImageRequest) returns (CreateImageReply) {}
  // rpc UpdateImage(UpdateImageRequest) returns (UpdateImageReply) {}
  // rpc DeleteImage(DeleteImageRequest) returns (DeleteImageReply) {}

  // rpc GetContainer(GetContainerRequest) returns (GetContainerReply) {}
  // rpc CreateContainer(CreateContainerRequest) returns (CreateContainerReply) {}
  // rpc UpdateContainer(UpdateContainerRequest) returns (UpdateContainerReply) {}
  // rpc DeleteContainer(DeleteContainerRequest) returns (DeleteContainerReply) {}

  // rpc GetVolume(GetVolumeRequest) returns (GetVolumeReply) {}
  // rpc CreateVolume(CreateVolumeRequest) returns (CreateVolumeReply) {}
  // rpc UpdateVolume(UpdateVolumeRequest) returns (UpdateVolumeReply) {}
  // rpc DeleteVolume(DeleteVolumeRequest) returns (DeleteVolumeReply) {}

  // rpc GetLoadbalancer(GetLoadbalancerRequest) returns (GetLoadbalancerReply) {}
  // rpc CreateLoadbalancer(CreateLoadbalancerRequest) returns (CreateLoadbalancerReply) {}
  // rpc UpdateLoadbalancer(UpdateLoadbalancerRequest) returns (UpdateLoadbalancerReply) {}
  // rpc DeleteLoadbalancer(DeleteLoadbalancerRequest) returns (DeleteLoadbalancerReply) {}
}

message StatusRequest {}

message StatusReply {
    string Msg = 1;
}

message TraceContext {
    string TraceId = 1;
    string ActionName = 2;
    string UserName = 3;
    string RoleName = 4;
    string ProjectName = 5;
    string ProjectRoleName = 6;
    int64  StatusCode = 7;
    string Err = 8;
}

//
// Action
//
message ActionRequest {
    TraceContext Tctx = 1;
    string Target = 2;
    string Cluster = 3;
    string Spec = 4;
}

message ActionReply {
    TraceContext Tctx = 1;
    repeated Cluster Clusters = 2;
    repeated Node Nodes = 3;
    repeated Compute Computes = 4;
    repeated Network Networks = 5;
    repeated Image Images = 6;
}

//
// Node
//
message UpdateNodeRequest {
    TraceContext Tctx = 1;
    string Name = 2;
    string Kind = 3;
    string Role = 4;
    string Status = 5;
    string StatusReason = 6;
    string State = 7;
    string StateReason = 8;
}

message UpdateNodeReply {
    TraceContext Tctx = 1;
}

message Cluster {
    google.protobuf.Timestamp UpdatedAt = 1;
    google.protobuf.Timestamp CreatedAt = 2;
    string Name = 3;
}

message Node {
    google.protobuf.Timestamp UpdatedAt = 1;
    google.protobuf.Timestamp CreatedAt = 2;
    string Cluster = 3;
    string Name = 4;
    string Kind = 5;
    string Role = 6;
    string Status = 7;
    string StatusReason = 8;
    string State = 9;
    string StateReason = 10;
}

message Compute {
    google.protobuf.Timestamp UpdatedAt = 1;
    google.protobuf.Timestamp CreatedAt = 2;
    string Cluster = 3;
    string Kind = 4;
    string Name = 5;
    string FullName = 6;
    string Labels = 7;
    string Status = 8;
    string StatusReason = 9;
    string Spec = 10;
}

message Network {
    google.protobuf.Timestamp UpdatedAt = 1;
    google.protobuf.Timestamp CreatedAt = 2;
    string Cluster = 3;
    string Kind = 4;
    string Name = 5;
    string FullName = 6;
    string Labels = 7;
    string Status = 8;
    string StatusReason = 9;
    string Spec = 10;
}

message Image {
    google.protobuf.Timestamp UpdatedAt = 1;
    google.protobuf.Timestamp CreatedAt = 2;
    string Cluster = 3;
    string Kind = 4;
    string Name = 5;
    string FullName = 6;
    string Labels = 7;
    string Status = 8;
    string StatusReason = 9;
    string Spec = 10;
}
